# rehti-mmorpg

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  cloudbuild.yaml  docker-compose.yaml  kube-db.yaml  kube-server.yaml  kube.yaml  run.sh
assets/: README.md  animations.json  characters.json  items.json  objects.json  skills.json
client/: CMakeLists.txt  CMakeUserPresets.json  build_client.sh  conanfile.py  conanfile.txt  generate_client.sh
client/network/rehtiNetwork.dir/Debug/: rehtiNetwork.lib.recipe
client/network/rehtiNetwork.dir/Debug/rehtiNetwork.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  rehtiNetwork.lastbuildstate
client/src/: Client.cpp  Client.hpp  Main.cpp  Utils.cpp  Utils.hpp  client.cpp  clientTesti.cpp  main.cpp
database/: deploy.sql
docs/: Doxyfile
html/: AABB_8cpp.html  AABB_8cpp.js  AABB_8cpp__incl.dot  AABB_8cpp__incl.map  AABB_8cpp__incl.md5  AABB_8cpp_a84f9fe626856f524cb482bca08c4f2f2_cgraph.dot  AABB_8cpp_a84f9fe626856f524cb482bca08c4f2f2_cgraph.md5  AABB_8cpp_a84f9fe626856f524cb482bca08c4f2f2_icgraph.dot  AABB_8cpp_a8673fc5f0b3d4ca8745793df1c907d7e_cgraph.md5  AABB_8cpp_a8673fc5f0b3d4ca8745793df1c907d7e_icgraph.dot  AABB_8hpp.html  AABB_8hpp.js  AABB_8hpp__dep__incl.dot  AABB_8hpp__dep__incl.map  AABB_8hpp__dep__incl.md5  AABB_8hpp__incl.dot  AABB_8hpp__incl.map  AABB_8hpp_a445c2c3a703ab69e974859af3682b1a5_icgraph.dot  AABB_8hpp_a445c2c3a703ab69e974859af3682b1a5_icgraph.map  AABB_8hpp_a445c2c3a703ab69e974859af3682b1a5_icgraph.md5  AABB_8hpp_a50782631a2718f46ec782d8f7b86eb94_cgraph.map  AABB_8hpp_a50782631a2718f46ec782d8f7b86eb94_icgraph.map  AABB_8hpp_a50782631a2718f46ec782d8f7b86eb94_icgraph.md5  AABB_8hpp_a8673fc5f0b3d4ca8745793df1c907d7e_cgraph.dot  AABB_8hpp_a8673fc5f0b3d4ca8745793df1c907d7e_cgraph.map  AABB_8hpp_a8673fc5f0b3d4ca8745793df1c907d7e_icgraph.map  AABB_8hpp_a8673fc5f0b3d4ca8745793df1c907d7e_icgraph.md5  AABB_8hpp_abc4a6a4eceb21ddd3da0192c2953f865_icgraph.dot  (+3666 more)
rehtiLib/assets/loader/: CMakeLists.txt  Main.cpp  README.md
rehtiLib/assets/loader/lodepng/: lodepng.h
rehtiLib/assets/loader/src/: AnimationTypeGenerator.hpp  MapLoader.hpp  MapObjLoader.hpp  Utils.hpp
rehtiLib/assets/reader/: CMakeLists.txt  README.md
rehtiLib/assets/reader/include/: RehtiReader.hpp
rehtiLib/assets/reader/includeWithAssimp/: RehtiReader.hpp
rehtiLib/assets/reader/src/: AnimationReader.cpp  AnimationReader.hpp  AssetCache.cpp  AssetCache.hpp  AssetTypes.hpp  Assimp.cpp  Assimp.hpp  AssimpObjectReader.cpp  AssimpObjectReader.hpp  CharacterReader.cpp  CharacterReader.hpp  ItemReader.cpp  ItemReader.hpp  MapReader.cpp  MapReader.hpp  ObjectReader.cpp  ObjectReader.hpp  SkillReader.cpp  SkillReader.hpp  TextureReader.cpp  TextureReader.hpp  Utils.cpp  Utils.hpp
rehtiLib/audio/: CMakeLists.txt
rehtiLib/audio/include/: audio.h
rehtiLib/audio/src/: RehtiAudio.cpp  RehtiAudio.hpp
rehtiLib/graphics/: CMakeLists.txt
rehtiLib/graphics/include/: graphics.h
rehtiLib/graphics/src/: AABB.cpp  AABB.hpp  BasicTypes.hpp  BufferManager.cpp  BufferManager.hpp  Camera.cpp  Camera.hpp  DescriptorBuilder.cpp  DescriptorBuilder.hpp  GraphicsObjectManager.cpp  GraphicsObjectManager.hpp  GraphicsTypes.cpp  GraphicsTypes.hpp  Mesh.cpp  Mesh.hpp  RehtiGraphics.cpp  RehtiGraphics.hpp  RehtiGui.cpp  RehtiGui.hpp  ShaderManager.cpp  ShaderManager.hpp  SimpleMesh.cpp  SimpleMesh.hpp  TimerCallbackSystem.cpp  TimerCallbackSystem.hpp  base.cpp  base.hpp
rehtiLib/graphics/src/shaders/: characterShader.frag  characterShader.vert  compileShaders.bat  mapShader.frag  mapShader.vert  objectShader.frag  objectShader.vert  shader.frag  shader.vert  testShader.frag  testShader.vert
rehtiLib/map/loader/: CMakeLists.txt  README.md  main.cpp
rehtiLib/map/loader/lodepng/: lodepng.cpp
rehtiLib/map/loader/src/: loader.hpp  utils.hpp
rehtiLib/network/: CMakeLists.txt  conanfile.txt
rehtiLib/network/include/: network.h
rehtiLib/network/src/: Connection.cpp  Connection.hpp  Message.hpp  MessageIds.hpp  MessageQueue.hpp  NetworkBase.cpp  networkBase.cpp  networkBase.hpp
rehtiLib/network/src/api/: MessageApi.cpp  MessageApi.hpp  MessageTypes.hpp  Types.hpp
rehtiLib/utils/: CMakeLists.txt  RapidjsonHelpers.hpp
rehtiLib/utils/include/: RehtiUtils.hpp
rehtiLib/utils/src/: RapidjsonHelpers.cpp  RapidjsonHelpers.hpp  TileUtils.cpp  TileUtils.hpp
server/: CMakeLists.txt  Dockerfile  Dockerfile.prod  conanfile.txt
server/docker/: Dockerfile
server/src/: Action.cpp  Action.hpp  AttackAction.cpp  AttackAction.hpp  CMakeLists.txt  Coordinates.hpp  Entity.cpp  Entity.hpp  GameWorld.cpp  GameWorld.hpp  Main.cpp  MoveAction.cpp  MoveAction.hpp  PlayerCharacter.cpp  PlayerCharacter.hpp  Server.cpp  Server.hpp  main.cpp
server/src/action/: Action.cpp  Action.hpp  AttackAction.cpp  AttackAction.hpp  MoveAction.cpp  MoveAction.hpp  ObjectInteractAction.cpp  ObjectInteractAction.hpp  PickUpAction.cpp  PickUpAction.hpp  RespawnAction.cpp  RespawnAction.hpp
server/src/database/: Connect.cpp  Connect.hpp  DatabaseManager.cpp  DatabaseManager.hpp
server/src/entity/: AggressiveNpc.cpp  AggressiveNpc.hpp  Bandit.cpp  Bandit.hpp  Entity.cpp  Entity.hpp  Goblin.cpp  Goblin.hpp  Npc.cpp  Npc.hpp  PassiveNpc.cpp  PassiveNpc.hpp  PlayerCharacter.cpp  PlayerCharacter.hpp
server/src/item/: Equipment.cpp  Equipment.hpp  EquippableItem.cpp  EquippableItem.hpp  FoodItem.cpp  FoodItem.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  ItemStats.hpp
server/src/map/: Map.hpp
server/src/object/: LootObject.cpp  LootObject.hpp  Object.cpp  Object.hpp  ResourceObject.cpp  ResourceObject.hpp
server/src/skill/: SkillSet.cpp  SkillSet.hpp
server/src/utils/: AssetManager.cpp  AssetManager.hpp
server/src/world/: Coordinates.cpp  Coordinates.hpp  GameWorld.cpp  GameWorld.hpp  Map.cpp  Map.hpp  Utils.cpp  Utils.hpp
server/test/: CMakeLists.txt
server/test/units/: Pathfinding.cpp
(+4138 files in other folders)
